# phonebook-thallium

./: CMakeLists.txt  initial-setup.json
examples/: CMakeLists.txt  bedrock-config.json  client.cpp  server.cpp
include/YP/: Client.hpp  Exception.hpp  Future.hpp  PhonebookHandle.hpp  PhonebookInterface.hpp  Provider.hpp  ProviderHandle.hpp  Result.hpp
src/: Backend.cpp  BedrockModule.cpp  CMakeLists.txt  Client.cpp  ClientImpl.hpp  PhonebookHandle.cpp  PhonebookHandleImpl.hpp  Provider.cpp  ProviderImpl.hpp  YP-client.pc.in  YP-config.cmake.in  YP-server.pc.in
src/dummy/: DummyBackend.cpp  DummyBackend.hpp
tests/: CMakeLists.txt  ClientTest.cpp  PhonebookTest.cpp
